--- a/instashow/api/.htaccess
+++ b/instashow/api/.htaccess
@@ -1,4 +1,13 @@
-<Files *.html>
-Order allow,deny
-Allow from all
-</Files>
+<FilesMatch "\.(?i:php)$">
+    <IfModule !mod_authz_core.c>
+        Order allow,deny
+        Allow from all
+    </IfModule>
+    <IfModule mod_authz_core.c>
+        Require all granted
+    </IfModule>
+</FilesMatch>
+
+<IfModule mod_rewrite.c>
+    RewriteEngine Off
+</IfModule>
